--- a/Login/Views/Home/Index.cshtml
+++ b/Login/Views/Home/Index.cshtml
@@ -11,8 +11,10 @@
             <a href="/Usuarios/Index" class="btn btn-dark">Lista de Usuários</a>
         </div>
         <div class="col-3">
-            <a href="/Clientes/Index" class="btn btn-danger">Lista de Clientes</a>
+            <a href="/Clientes/Index" class=" btn btn btn-danger">Lista de Clientes</a>
         </div>
-      
+        <div class="col-3">
+            <a href="/Login/Logoff" class=" btn btn-warning">Sair do sistema </a>
+        </div>
     </div>
 </div>
