--- a/Login/Views/Clientes/Index.cshtml
+++ b/Login/Views/Clientes/Index.cshtml
@@ -24,6 +24,7 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
+    //tabelas 
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
